docs/0.18/_sources/api/gammapy.modeling.models.TemplateSpectralModel.rst.txt
TemplateSpectralModel
=====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: TemplateSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~TemplateSpectralModel.covariance
      ~TemplateSpectralModel.default_parameters
      ~TemplateSpectralModel.is_norm_spectral_model
      ~TemplateSpectralModel.parameters
      ~TemplateSpectralModel.tag
      ~TemplateSpectralModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~TemplateSpectralModel.__call__
      ~TemplateSpectralModel.copy
      ~TemplateSpectralModel.create
      ~TemplateSpectralModel.energy_flux
      ~TemplateSpectralModel.energy_flux_error
      ~TemplateSpectralModel.evaluate
      ~TemplateSpectralModel.evaluate_error
      ~TemplateSpectralModel.from_dict
      ~TemplateSpectralModel.from_parameters
      ~TemplateSpectralModel.integral
      ~TemplateSpectralModel.integral_error
      ~TemplateSpectralModel.inverse
      ~TemplateSpectralModel.plot
      ~TemplateSpectralModel.plot_error
      ~TemplateSpectralModel.read_xspec_model
      ~TemplateSpectralModel.spectral_index
      ~TemplateSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: is_norm_spectral_model
   .. autoattribute:: parameters
   .. autoattribute:: tag
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: read_xspec_model
   .. automethod:: spectral_index
   .. automethod:: to_dict
